[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Yahor Poresh"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
actix-rt = "2"
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"
log = "0.4.14"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.5"
tracing-log = "0.1.2"
tracing-actix-web = "0.3.0-beta.2"
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde-aux = "1.0.1"

[dev-dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
lazy_static = "1.4.0"
tokio = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
